# dolphin-compiler

./: .gitignore  README.md  dolphin_compiler.opam  dune-project  main.c  main.ll  run_all_test.sh  run_test.sh
.devcontainer/: devcontainer.json
lib/: ast.ml  cfgBuilder.ml  codeGenerator.ml  dune  env.ml  errors.ml  llvmEnv.ml  pretty.ml  semant.ml  testUtils.ml  typedAst.ml  typedPretty.ml
test/: dune  test_codegen.ml  test_semant.ml
